--- a/user-app/config/config.json
+++ b/user-app/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "Mischka21",
+    "password": "",
     "database": "fm_user_db",
     "host": "127.0.0.1",
     "dialect": "mysql"
